# multi-lang-app-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  Brewfile  Justfile  README.md  Tiltfile  common.just  compose.yaml
.github/workflows/: ci.yaml  pre-commit-autoupdate.yaml
backends/: DATA_SPEC.md  Justfile  SPEC.md  fixtures.sql  mod.just  schema.sql
backends/fastapi/: .env.example  .gitignore  Dockerfile  Justfile  pyproject.toml  ruff.toml
backends/fastapi/app/: config.py  db.py  main.py
backends/fastapi/app/models/: __init__.py  comments.py  posts.py  votes.py
backends/fastapi/app/routers/: __init__.py  comments.py  health.py  posts.py  votes.py
backends/fastapi/tests/: conftest.py
backends/fastapi/tests/routers/: test_health_router.py  test_posts_router.py
database_schema/: fixtures.sql  schema.sql
frontends/: Justfile
frontends/nextjs/: .dockerignore  Dockerfile  Justfile  package-lock.json  package.json
frontends/nextjs/app/: layout.tsx  page.tsx
frontends/nextjs/app/posts/: page.tsx
frontends/nextjs/app/posts/[postId]/: page.tsx
frontends/nextjs/app/posts/[postId]/edit/: page.tsx
frontends/nextjs/app/posts/new/: page.tsx
frontends/nextjs/components/comments/: CommentForm.tsx  CommentNode.tsx  CommentTree.tsx  LoadMoreReplies.tsx
frontends/nextjs/components/layout/: Header.tsx
frontends/nextjs/components/posts/: DeletePostButton.tsx  PostCard.tsx  PostDetail.tsx  PostForm.tsx  PostList.tsx
frontends/nextjs/components/votes/: VoteButtons.tsx
frontends/nextjs/lib/api/: client.ts  comments.ts  posts.ts  treeUtils.ts  types.ts  votes.ts
frontends/nextjs/lib/context/: UsernameContext.tsx
nginx/: nginx.conf
