[project]
name = "fastapi-backend"
version = "0.1.0"
description = "FastAPI backend for the multi-lang-app-demo"
requires-python = ">=3.14"
dependencies = [
    "fastapi~=0.132.0",
    "uvicorn[standard]~=0.41.0",
    "asyncpg~=0.31.0",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.13.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "ty>=0.0.18",
]

[tool.pytest.ini_options]
addopts = "-v"
